<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addCheck"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/etAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_checkList"
        android:textColor="@color/text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_checkList"
            android:onClick="onNext"
            android:text="@string/next"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_checkList"
            android:onClick="onOk"
            android:text="@string/ok"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_checkList"
            android:layout_toLeftOf="@id/tvOk"
            android:layout_toStartOf="@id/tvOk"
            android:onClick="onCancel"
            android:text="@string/cancel"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

</LinearLayout>